--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,25 @@ p {
 .card{
   border-radius: 0;
 }
+
+#page-top{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 45px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background-color: #ffa500;
+}
+
+#page-top a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
 @media screen and (min-width:576px) {
   .row {
     margin-bottom: 30px;
